fix demo layout issues

--- a/src/simple-grid.css
+++ b/src/simple-grid.css
@@ -84,9 +84,3 @@ table.simple-grid > tbody > tr.focused
 , table.simple-grid > tbody > tr.focused > td {
     background-color: #b0cBfA;
 }
-
-
-input.ng-hide {
-    display: block !important;
-    visibility:collapse;
-}
